test/extern/bradc/sparseToExtern.good
sparseToExtern.chpl:10: error: c_ptrTo unsupported array type
